import org.cyclonedx.Version

buildscript {
    configurations.classpath {
        resolutionStrategy.eachDependency { details ->
            if (details.requested.group == 'com.fasterxml.jackson.core' && details.requested.name == 'jackson-core') {
                details.useVersion '2.21.3'
                details.because 'GHSA-72hv-8253-57qq: Upgrade transitive dependency from CycloneDX Gradle plugin'
            }
            if (details.requested.group == 'org.codehaus.plexus' && details.requested.name == 'plexus-utils') {
                details.useVersion '3.6.1'
                details.because 'CVE-2025-67030: Upgrade transitive dependency from CycloneDX Gradle plugin'
            }
        }
    }
}

plugins {
    id 'java'
    id 'distribution'
    id 'org.springframework.boot' version '4.0.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.graalvm.buildtools.native' version '0.11.5'
    id 'org.cyclonedx.bom' version '3.2.4'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
        vendor = JvmVendorSpec.of("GRAALVM_COMMUNITY")
    }
}

repositories {
    mavenCentral()
}

ext {
    set('arconiaVersion', "0.27.1")
    set('orasJavaVersion', "0.6.3")
    set('picocliVersion', "4.7.7")
    set('jlineVersion', "3.30.13")
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter"

    implementation "info.picocli:picocli:${picocliVersion}"
    implementation "org.jline:jline-terminal-ffm:${jlineVersion}"
    annotationProcessor "info.picocli:picocli-codegen:${picocliVersion}"

    implementation("land.oras:oras-java-sdk:${orasJavaVersion}") {
        exclude group: 'org.hdrhistogram', module: 'HdrHistogram'
        exclude group: 'org.latencyutils', module: 'LatencyUtils'
    }
    implementation "tools.jackson.dataformat:jackson-dataformat-yaml"

    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.testcontainers:testcontainers-junit-jupiter"
    testImplementation "io.arconia:arconia-spring-boot-starter:${arconiaVersion}"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

springBoot {
    buildInfo()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
}

graalvmNative {
    binaries {
        main {
            imageName = "arconia"
            // See: https://jline.org/versions/4.0/docs/modules/terminal-providers#ffm-provider
            buildArgs.add('--enable-native-access=ALL-UNNAMED')
        }
    }
}

tasks.withType(JavaExec).configureEach {
   // See: https://jline.org/versions/4.0/docs/modules/terminal-providers#ffm-provider
   jvmArgs += ["--enable-native-access=ALL-UNNAMED"]
}

tasks.withType(Test).configureEach {
   // See: https://jline.org/versions/4.0/docs/modules/terminal-providers#ffm-provider
   jvmArgs += ["--enable-native-access=ALL-UNNAMED"]
}

tasks.named('test') {
    useJUnitPlatform()
}

cyclonedxDirectBom {
    includeConfigs = ["runtimeClasspath"]
    projectType = "application"
    schemaVersion = Version.VERSION_16
}

distributions {
    main {
        contents {
            from("$buildDir/native/nativeCompile") {
                into 'bin'
                include 'arconia', 'arconia.exe'
                filePermissions {
                    user {
                        read = true
                        execute = true
                    }
                    group {
                        read = true
                        execute = true
                    }
                    other {
                        read = true
                        execute = true
                    }
                }
            }
            from("$buildDir/reports/cyclonedx") {
                include 'application.cdx.json'
                rename { 'sbom.cdx.json' }
            }
            from(rootDir) {
                include 'LICENSE', 'README.md'
            }
        }
    }
}

tasks.named('distZip') {
    dependsOn('cyclonedxBom')
    def archiveName = gradle.startParameter.projectProperties['archiveName'] ?: "arconia-${project.version}.zip"
    onlyIf {
        gradle.startParameter.taskNames.contains("distZip")
    }
    archiveFileName = "${archiveName}"
}

tasks.named('distTar') {
    enabled = false
}
